# GraphDigitization

./: .env.example  .gitignore  README.md  pyproject.toml
data/pseudo/: pseudo_210018_1839.hints.json  pseudo_210018_1839.truth.json  pseudo_290022_1844.hints.json  pseudo_290022_1844.truth.json  pseudo_300026_1848.hints.json  pseudo_300026_1848.truth.json
docs/: colab.md  dataset_layout.md  design.md  how_it_works.md  paper_notes.md  pilot_results.md
notebooks/: lineformer_colab.ipynb
results/hardening-2026-07-03/: README.md  comparison_a.md  comparison_b.md  comparison_img.md  extractor_bench_a.csv  extractor_bench_b.csv  extractor_bench_img.csv  fullpage_eval.csv
results/live-2026-07-02/: README.md
results/multiseries-2026-07-02/: README.md
results/newtest-2026-07-02/: README.md
results/optimized-2026-07-02/: README.md
results/pilot-2026-07-02/: README.md  eval_report.md  series_eval.csv
scripts/: lineformer_infer.py  setup_lineformer_env.ps1  setup_lineformer_env.sh
src/graphdig/: __init__.py  artifacts.py  cli.py  config.py  dates.py  geometry.py  hints.py  pipeline.py  profiles.py  render.py  runs.py  units.py
tests/: conftest.py  test_artifacts.py  test_baseline_fit.py  test_bundle_roundtrip.py  test_calibration_fit.py  test_cli.py  test_eval_metrics.py  test_full_pipeline_offline.py  test_fullpage.py  test_gemini_points.py  test_generalization.py  test_geometry.py  test_gt_loaders.py  test_hints.py  test_live_gemini.py  test_optimizations.py  test_pseudo_page.py  test_ranged_zip.py  test_resample.py  test_stages_offline.py  test_units.py
(+286 files in other folders)
