[project]
name = "graphdigitization"
version = "0.1.0"
description = "MLLM-assisted digitization of historical line charts: Gemini reads axes, scales and metadata; LineFormer extracts the curves; classical math turns pixels into physical units."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Tobias Perschl" }]
dependencies = [
    "google-genai>=1.38",
    "pydantic>=2.7",
    "pillow>=10",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "opencv-python-headless>=4.9",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
graphdig = "graphdig.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphdig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires GEMINI_API_KEY and network access",
    "lineformer: requires the pinned LineFormer venv (.venvs/lineformer)",
]
addopts = "-m 'not live and not lineformer'"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["external", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
